@@ -1,3 +1,10 @@
+2010-12-20  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* pychecker/CodeChecks.py:
+	  Add SETUP_WITH implementation, similar to SETUP_FINALLY.
+	  Fixes one of the two unimplemented opcodes warnings about
+	  unittest.case
+
 2010-12-19  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/CodeChecks.py:
